cabal-version:      >=1.10
name:               morpheus-gql-library
version:            0.1.0.0

-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:       LICENSE
author:             Flavio Corpa
maintainer:         flavio.corpa@47deg.com

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

executable gql-library
  main-is:          Main.hs
  build-depends:
      base              >=4.13 && <4.14
    , bytestring
    , morpheus-graphql
    , text
    , scotty
  default-language: Haskell2010
