cabal-version:      >=1.10
name:               morpheus-gql-library
version:            0.1.0.0
synopsis:           Example of a GraphQL library app made with Morpheus
description:        Example of a GraphQL library app made with Morpheus.
bug-reports:        https://github.com/kutyel/morpheus-gql-library/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Flavio Corpa
maintainer:         flavio.corpa@47deg.com
copyright:          Copyright © 2019-2020 <http://47deg.com 47 Degrees>
category:           Web
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

executable gql-library
  main-is:          Main.hs
  build-depends:
      base              >=4.13    && <4.14
    , bytestring
    , extra
    , morpheus-graphql
    , regex-tdfa        >=1.3.1.0
    , scotty
    , text

  default-language: Haskell2010
